# doen

./: .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  hacs.json  install-hooks.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  conftest.py  exceptions.py  main.py
backend/app/api/: api_keys.py  auth.py  categories.py  deps.py  groups.py  ha.py  household_points.py  invitations.py  projects.py  schemas.py  sse.py  tasks.py  test_api_keys.py  test_auth.py  test_groups.py  test_ha.py  test_household_points.py  test_projects.py  test_tasks.py
backend/app/db/: migrate.py  session.py
backend/app/models/: __init__.py  api_key.py  base.py  category.py  group.py  group_invitation.py  household_points.py  project.py  task.py  user.py
backend/app/repositories/: api_key_repo.py  category_repo.py  group_invitation_repo.py  group_repo.py  household_points_repo.py  password_reset_repo.py  project_repo.py  task_repo.py  test_group_repo.py  test_project_repo.py  test_task_repo.py  test_user_repo.py  user_repo.py
backend/app/scheduler/: recurring.py  setup.py  test_recurring.py
backend/app/services/: api_key_service.py  auth.py  category_service.py  group_invitation_service.py  group_service.py  ha_oauth.py  household_points_service.py  mail_service.py  project_service.py  sse_bus.py  task_service.py  telegram_service.py  test_api_key_service.py  test_auth.py  test_auth_password.py  test_group_invitation_service.py  test_group_service.py  test_household_points_service.py  test_project_service.py  (+3 more)
(+125 files in other folders)
